@startuml Creatina

abstract class Pessoa {
  - nome: String
}

class PessoaFisica {
  - cpf: String
  - dataNascimento: LocalDate
}

class PessoaJuridica {
  - cnpj: String
}

class Usuario {
  - login: String
  - senha: String
  - email: String
}

class Cliente {
}

class Funcionario {
  - cargo: String
  - salario: BigDecimal
  - dataContratacao: LocalDate
}

Pessoa <|-- PessoaFisica
Pessoa <|-- PessoaJuridica
Usuario <-- Cliente
Usuario <-- Funcionario
Funcionario --> PessoaFisica
Cliente --> PessoaFisica
Fornecedor --|> PessoaJuridica

class Telefone {
  - ddd: String
  - numero: String
}

class Endereco {
  - logradouro: String
  - numero: String
  - complemento: String
  - bairro: String
  - cep: String
}

class Municipio {
  - nome: String
}

class Estado {
  - nome: String
  - sigla: String
}

class Pedido {
  - data: LocalDateTime
  - valorTotal: BigDecimal
}

class ItemPedido {
  - quantidade: Integer
  - preco: BigDecimal
}

class EstadoPedido {
  - dataSituacao: LocalDateTime
}

Enum SituacaoPedido {
  + ENVIADO
  + ENTREGUE
  + DEVOLVIDO
  + PAGAMENTO_EM_ESPERA
}

class EnderecoEntrega {
}

Enum SituacaoPagamento {
  + PENDENTE
  + PAGO
  + CANCELADO
  + VENCIDO
}

abstract class Pagamento {
  - valor: BigDecimal
  - dataPagamento: LocalDateTime
  - dataVencimento: LocalDateTime
}

class Cartao {
  - numero: String
  - nomeTitular: String
  - validade: LocalDate
  - cvc: Integer
}

Enum TipoCartao {
  + CREDITO
  + DEBITO
}

class Pix {
  - chave: String
}

class Boleto {
  - codigoBarras: String
  - dataValidade: LocalDate
}

Pagamento <|-- Pix
Pagamento <|-- Boleto
Pagamento <|-- Cartao
Pagamento "*" --> "1" SituacaoPagamento

class Fornecedor {
}

class Creatina {
  - nome: String
  - marca: String
  - quantidade: Integer
  - tipo: String
  - preco: BigDecimal
}

class Categoria {
  - nome: String
  - descricao: String
}

class Lote {
  - codigo: String
  - quantidade: Integer
  - dataFabricacao: LocalDate
  - dataValidade: LocalDate
}

class Avaliacao {
  - estrelas: Integer
  - comentario: String
  - dataAvaliacao: LocalDateTime
}

' Relacionamentos

Pessoa "1" *--> "*" Telefone
Pessoa "1" *--> "*" Endereco

EnderecoEntrega *--> Endereco
Endereco "*" --> "1" Municipio
Municipio "*" *--> "1" Estado

Cliente "*" --> "*" Creatina : listaDesejos
Cliente "1" --> "*" Avaliacao

ItemPedido "*" --> "1" Lote

Pedido "*" --> "1" Cliente
Pedido "1" *--> "*" ItemPedido
Pedido *--> Pagamento
Pedido "1" *--> "*" EstadoPedido
Pedido "1" *--> "1" EnderecoEntrega

EstadoPedido "*" --> "1" SituacaoPedido

Cartao --> TipoCartao

Creatina "1" *--> "1" Categoria
Creatina "1" --> "*" Avaliacao
Creatina "*" --> "1" Fornecedor

Lote "*" --> "1" Creatina
Lote "1" --> "1" Endereco : origem

note left of Creatina: Quantidade em gramas

@enduml
